--- a/resources/assets/css/index.css
+++ b/resources/assets/css/index.css
@@ -26,3 +26,7 @@ td, th {
 .flatpickr-calendar {
     background: navajowhite !important;
 }
+
+code, kbd, pre, samp {
+    unicode-bidi: unset !important;
+}
